--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "[typescript]": {
         "editor.tabSize": 2,
         "files.encoding": "utf8"
-    }
+    },
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
