--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
-    "test": "ng test",
-    "lint": "ng lint",
-    "e2e": "ng e2e"
+    "build": "ng build --prod && copy .\\docs\\index.html .\\docs\\404.html",
+    "lint": "ng lint"
   },
   "private": true,
   "dependencies": {
