--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "core-js": "~2.5.4",
+    "escape-string-regexp": "^1.0.5",
     "hammerjs": "^2.0.8",
     "rxjs": "~6.3.3",
     "tslib": "~1.9.0",
@@ -30,6 +31,7 @@
     "@angular/cli": "~7.3.3",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
+    "@types/escape-string-regexp": "^1.0.0",
     "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "protractor": "~5.4.0",
