--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "core-js": "~2.5.4",
     "escape-string-regexp": "^1.0.5",
     "hammerjs": "^2.0.8",
+    "material-design-icons": "^3.0.1",
     "rxjs": "~6.3.3",
     "tslib": "~1.9.0",
     "zone.js": "~0.8.26"
