--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
+    "bluebird": "^3.5.4",
     "core-js": "~2.5.4",
     "escape-string-regexp": "^1.0.5",
     "hammerjs": "^2.0.8",
@@ -34,6 +35,7 @@
     "@angular/language-service": "~7.2.0",
     "@types/escape-string-regexp": "^1.0.0",
     "@types/node": "~8.9.4",
+    "@types/bluebird": "^3.5.26",
     "codelyzer": "~4.5.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
