--- a/package.json
+++ b/package.json
@@ -9,37 +9,38 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~7.2.13",
-    "@angular/cdk": "~7.3.7",
-    "@angular/common": "~7.2.0",
-    "@angular/compiler": "~7.2.0",
-    "@angular/core": "~7.2.0",
-    "@angular/forms": "~7.2.0",
-    "@angular/material": "~7.3.7",
-    "@angular/platform-browser": "~7.2.0",
-    "@angular/platform-browser-dynamic": "~7.2.0",
-    "@angular/router": "~7.2.0",
+    "@angular/animations": "^7.2.13",
+    "@angular/cdk": "^7.3.7",
+    "@angular/common": "^7.2.13",
+    "@angular/compiler": "^7.2.13",
+    "@angular/core": "^7.2.13",
+    "@angular/forms": "^7.2.13",
+    "@angular/material": "^7.3.7",
+    "@angular/platform-browser": "^7.2.13",
+    "@angular/platform-browser-dynamic": "^7.2.13",
+    "@angular/router": "^7.2.13",
     "bluebird": "^3.5.4",
-    "core-js": "~2.5.4",
+    "core-js": "^2.6.5",
     "escape-string-regexp": "^1.0.5",
+    "globalthis": "^1.0.0",
     "hammerjs": "^2.0.8",
     "material-design-icons": "^3.0.1",
-    "rxjs": "~6.3.3",
-    "tslib": "~1.9.0",
-    "zone.js": "~0.8.26"
+    "rxjs": "^6.4.0",
+    "tslib": "^1.9.3",
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.13.0",
-    "@angular/cli": "~7.3.3",
-    "@angular/compiler-cli": "~7.2.0",
-    "@angular/language-service": "~7.2.0",
-    "@types/escape-string-regexp": "^1.0.0",
-    "@types/node": "~8.9.4",
+    "@angular-devkit/build-angular": "^0.13.0",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.13",
+    "@angular/language-service": "^7.2.13",
     "@types/bluebird": "^3.5.26",
-    "codelyzer": "~4.5.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "@types/escape-string-regexp": "^1.0.0",
+    "@types/node": "^8.10.45",
+    "codelyzer": "^4.5.0",
+    "protractor": "^5.4.2",
+    "ts-node": "^7.0.1",
+    "tslint": "^5.16.0",
     "typescript": "~3.2.4"
   }
 }
