--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,7 +14,9 @@
     "typeRoots": [
       "node_modules/@types"
     ],
-    "types": [],
+    "types": [
+      "node"
+    ],
     "lib": [
       "es2018",
       "dom"
