--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build --prod && copy .\\docs\\index.html .\\docs\\404.html",
+    "build":"run-script-os",
+    "build:win32": "ng build --prod && copy .\\docs\\index.html .\\docs\\404.html",
+    "build:linux:darwin": "ng build --prod && cp ./docs/index.html ./docs/404.html",
     "lint": "ng lint"
   },
   "private": true,
