--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/node": "^8.10.45",
     "codelyzer": "^5.0.0",
     "protractor": "^5.4.2",
+    "run-script-os":"^1.0.5",
     "ts-node": "^7.0.1",
     "tslint": "^5.16.0",
     "typescript": "~3.2.4"
