--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "run-script-os",
-    "build:win32": "ng build --prod && copy .\\docs\\index.html .\\docs\\404.html && type nul > .\\docs\\.nojekyll",
-    "build:linux:darwin": "ng build --prod && cp ./docs/index.html ./docs/404.html && touch ./docs/.nojekyll",
+    "build:win32": "ng build --prod && copy .\\dist\\index.html .\\dist\\404.html && type nul > .\\dist\\.nojekyll",
+    "build:linux:darwin": "ng build --prod && cp ./dist/index.html ./dist/404.html && touch ./dist/.nojekyll",
     "lint": "ng lint"
   },
   "private": true,
