--- a/.travis.yml
+++ b/.travis.yml
@@ -11,4 +11,4 @@ deploy:
   skip_cleanup: true
   keep_history: false
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-  local_dir: ./docs
+  local_dir: ./dist
