--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^7.2.13",
     "@angular/router": "^7.2.13",
     "bluebird": "^3.5.4",
+    "dexie": "^2.0.4",
     "escape-string-regexp": "^2.0.0",
     "globalthis": "^1.0.0",
     "hammerjs": "^2.0.8",
