--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^8.0.0",
     "@angular/router": "^8.0.0",
     "bluebird": "^3.5.5",
+    "codelyzer": "^5.1.0",
     "dexie": "^2.0.4",
     "escape-string-regexp": "^2.0.0",
     "globalthis": "^1.0.0",
@@ -28,6 +29,7 @@
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
+    "tslint-angular": "^3.0.2",
     "zone.js": "^0.9.1"
   },
   "devDependencies": {
