--- a/angular.json
+++ b/angular.json
@@ -36,7 +36,7 @@
           },
           "configurations": {
             "production": {
-              "baseHref": "https://ehtagtranslation.github.io/Editor/",
+              "baseHref": "https://EhTagTranslation.GitHub.io/Editor/",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
