--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dexie": "^2.0.4",
     "escape-string-regexp": "^2.0.0",
     "hammerjs": "^2.0.8",
+    "lazysizes": "^5.1.1",
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.5.2",
     "tslib": "^1.10.0",
