Revert "use now.sh"
This reverts commit 707afc20ab4e13aceeb09e049f9f1270c8af08d8.

--- a/angular.json
+++ b/angular.json
@@ -36,6 +36,7 @@
           },
           "configurations": {
             "production": {
+              "baseHref": "https://EhTagTranslation.GitHub.io/Editor/",
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
