--- a/angular.json
+++ b/angular.json
@@ -76,5 +76,8 @@
       }
     }
   },
-  "defaultProject": "EhTagEditor"
+  "defaultProject": "EhTagEditor",
+  "cli": {
+    "analytics": false
+  }
 }
