--- a/package.json
+++ b/package.json
@@ -1,41 +1,49 @@
 {
-  "name": "eh-tag-editor",
-  "version": "0.0.0",
-  "scripts": {
-    "start": "ng serve",
-    "build": "ng build --prod"
-  },
-  "private": true,
-  "dependencies": {
-    "@angular/animations": "^9.1.0",
-    "@angular/cdk": "^9.2.0",
-    "@angular/common":"^9.1.0",
-    "@angular/compiler": "^9.1.0",
-    "@angular/core":"^9.1.0",
-    "@angular/forms": "^9.1.0",
-    "@angular/material":"^9.2.0",
-    "@angular/platform-browser": "^9.1.0",
-    "@angular/platform-browser-dynamic": "^9.1.0",
-    "@angular/router": "^9.1.0",
-    "bluebird": "^3.7.2",
-    "dexie": "^2.0.4",
-    "escape-string-regexp": "^4.0.0",
-    "hammerjs": "^2.0.8",
-    "lazysizes": "^5.2.0",
-    "material-design-icons": "^3.0.1",
-    "rxjs": "^6.5.5",
-    "tslib": "^1.11.2",
-    "zone.js": "^0.10.3"
-  },
-  "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.5",
-    "@angular/cli": "^9.1.5",
-    "@angular/compiler-cli":"^9.1.0",
-    "@angular/language-service": "^9.1.6",
-    "@types/bluebird-global": "^3.5.12",
-    "@types/escape-string-regexp": "^2.0.1",
-    "@types/node": "^13.13.5",
-    "ts-node": "^8.10.1",
-    "typescript": "^3.7.5"
-  }
+    "name": "eh-tag-editor",
+    "version": "0.0.0",
+    "scripts": {
+        "start": "ng serve",
+        "build": "ng build --prod",
+        "format": "prettier --write .",
+        "lint": "eslint ."
+    },
+    "private": true,
+    "dependencies": {
+        "@angular/animations": "^9.1.0",
+        "@angular/cdk": "^9.2.0",
+        "@angular/common": "^9.1.0",
+        "@angular/compiler": "^9.1.0",
+        "@angular/core": "^9.1.0",
+        "@angular/forms": "^9.1.0",
+        "@angular/material": "^9.2.0",
+        "@angular/platform-browser": "^9.1.0",
+        "@angular/platform-browser-dynamic": "^9.1.0",
+        "@angular/router": "^9.1.0",
+        "bluebird": "^3.7.2",
+        "dexie": "^2.0.4",
+        "escape-string-regexp": "^4.0.0",
+        "hammerjs": "^2.0.8",
+        "lazysizes": "^5.2.0",
+        "material-design-icons": "^3.0.1",
+        "rxjs": "^6.5.5",
+        "tslib": "^1.11.2",
+        "zone.js": "^0.10.3"
+    },
+    "devDependencies": {
+        "@angular-devkit/build-angular": "^0.901.5",
+        "@angular/cli": "^9.1.5",
+        "@angular/compiler-cli": "^9.1.0",
+        "@angular/language-service": "^9.1.6",
+        "@types/bluebird-global": "^3.5.12",
+        "@types/escape-string-regexp": "^2.0.1",
+        "@types/node": "^13.13.5",
+        "@typescript-eslint/eslint-plugin": "^2.31.0",
+        "@typescript-eslint/parser": "^2.31.0",
+        "eslint": "^7.0.0",
+        "eslint-config-prettier": "^6.11.0",
+        "eslint-plugin-prettier": "^3.1.3",
+        "prettier": "^2.0.5",
+        "ts-node": "^8.10.1",
+        "typescript": "^3.7.5"
+    }
 }
