--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,7 @@
         "strictPropertyInitialization": false,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "forceConsistentCasingInFileNames": true
+        "forceConsistentCasingInFileNames": true,
+        "skipLibCheck": true
     }
 }
