--- a/package.json
+++ b/package.json
@@ -9,37 +9,37 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^9.1.6",
-    "@angular/cdk": "^9.2.3",
-    "@angular/common": "^9.1.6",
-    "@angular/compiler": "^9.1.6",
-    "@angular/core": "^9.1.6",
-    "@angular/forms": "^9.1.6",
-    "@angular/material": "^9.2.3",
+    "@angular/animations": "^9.1.9",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/material": "^9.2.4",
     "@angular/platform-browser": "^9.1.9",
-    "@angular/platform-browser-dynamic": "^9.1.6",
-    "@angular/router": "^9.1.6",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "bluebird": "^3.7.2",
     "dexie": "^3.0.1",
     "escape-string-regexp": "^4.0.0",
     "hammerjs": "^2.0.8",
-    "lazysizes": "^5.2.0",
+    "lazysizes": "^5.2.1-rc2",
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.5.5",
-    "tslib": "^1.13.0",
+    "tslib": "^2.0.0",
     "zone.js": "^0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.901.6",
+    "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "^9.1.7",
-    "@angular/compiler-cli": "^9.1.6",
+    "@angular/compiler-cli": "^9.1.9",
     "@angular/language-service": "^9.1.9",
     "@types/bluebird-global": "^3.5.12",
     "@types/escape-string-regexp": "^2.0.1",
     "@types/node": "^14.0.5",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "eslint": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "^3.0.0",
+    "@typescript-eslint/parser": "^3.0.0",
+    "eslint": "^7.1.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.3",
     "prettier": "^2.0.5",
