--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
     "version": 1,
     "newProjectRoot": "projects",
     "projects": {
-        "EhTagEditor": {
+        "eh-tag-editor": {
             "root": "",
             "sourceRoot": "src",
             "projectType": "application",
@@ -27,8 +27,7 @@
                             "./node_modules/@angular/material/prebuilt-themes/purple-green.css",
                             "src/styles.sass"
                         ],
-                        "scripts": [],
-                        "es5BrowserSupport": true
+                        "scripts": []
                     },
                     "configurations": {
                         "production": {
@@ -61,18 +60,18 @@
                 "serve": {
                     "builder": "@angular-devkit/build-angular:dev-server",
                     "options": {
-                        "browserTarget": "EhTagEditor:build"
+                        "browserTarget": "eh-tag-editor:build"
                     },
                     "configurations": {
                         "production": {
-                            "browserTarget": "EhTagEditor:build:production"
+                            "browserTarget": "eh-tag-editor:build:production"
                         }
                     }
                 }
             }
         }
     },
-    "defaultProject": "EhTagEditor",
+    "defaultProject": "eh-tag-editor",
     "cli": {
         "analytics": false
     }
