--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,24 +1,14 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-    "compileOnSave": false,
-    "compilerOptions": {
-        "baseUrl": "./",
-        "outDir": "./dist/out-tsc",
-        "sourceMap": true,
-        "declaration": false,
-        "module": "ESNext",
-        "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
-        "importHelpers": true,
-        "target": "es5",
-        "typeRoots": ["node_modules/@types"],
-        "types": ["node", "bluebird-global"],
-        "lib": ["es2018", "dom"],
-        "strict": true,
-        "strictPropertyInitialization": false,
-        "noImplicitReturns": true,
-        "noFallthroughCasesInSwitch": true,
-        "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true
-    }
+    "files": [],
+    "references": [
+        {
+            "path": "./src/tsconfig.app.json"
+        }
+    ]
 }
