--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -1,6 +1,7 @@
 {
-    "extends": "../tsconfig.base.json",
+    "extends": "../tsconfig.json",
     "compilerOptions": {
+        "lib": ["es2019", "dom"],
         "outDir": "../out-tsc/app"
     },
     "exclude": ["test.ts", "**/*.spec.ts"]
