add nest packages

--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
     "name": "eh-tag-editor",
     "version": "0.0.0",
     "scripts": {
-        "start": "ng serve",
-        "build": "ng build --prod",
+        "start:browser": "ng serve",
+        "build:browser": "ng build --prod",
         "format": "prettier --write .",
         "lint": "eslint ."
     },
@@ -19,11 +19,20 @@
         "@angular/platform-browser": "^10.0.0",
         "@angular/platform-browser-dynamic": "^10.0.0",
         "@angular/router": "^10.0.0",
+        "@nestjs/common": "^7.2.0",
+        "@nestjs/config": "^0.5.0",
+        "@nestjs/core": "^7.2.0",
+        "@nestjs/platform-fastify": "^7.2.0",
+        "@nestjs/swagger": "^4.5.11",
         "bluebird": "^3.7.2",
+        "class-transformer": "^0.2.3",
+        "class-validator": "^0.12.2",
         "dexie": "^3.0.1",
         "escape-string-regexp": "^4.0.0",
+        "fastify-swagger": "^2.6.0",
         "lazysizes": "^5.2.2",
         "material-design-icons": "^3.0.1",
+        "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.3"
@@ -33,6 +42,9 @@
         "@angular/cli": "^10.0.0",
         "@angular/compiler-cli": "^10.0.0",
         "@angular/language-service": "^10.0.0",
+        "@nestjs/cli": "^7.4.1",
+        "@nestjs/schematics": "^7.0.1",
+        "@nestjs/testing": "^7.2.0",
         "@types/bluebird-global": "^3.5.12",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/node": "^14.0.14",
@@ -41,8 +53,15 @@
         "eslint": "^7.3.1",
         "eslint-config-prettier": "^6.11.0",
         "eslint-plugin-prettier": "^3.1.4",
+        "jest": "^26.1.0",
         "prettier": "^2.0.5",
+        "rimraf": "^3.0.2",
+        "supertest": "^4.0.2",
+        "ts-jest": "^26.1.1",
+        "ts-loader": "^7.0.5",
         "ts-node": "^8.10.2",
+        "tsconfig-paths": "^3.9.0",
+        "type-fest": "^0.15.1",
         "typescript": "^3.9.5"
     }
 }
