--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -1,7 +1,8 @@
 root: true
 parser: '@typescript-eslint/parser'
 parserOptions:
-    project: tsconfig.json
+    project:
+        - src/browser/tsconfig.json
 plugins:
     - '@typescript-eslint'
     - prettier
