init nestjs project

--- a/package.json
+++ b/package.json
@@ -2,8 +2,11 @@
     "name": "eh-tag-editor",
     "version": "0.0.0",
     "scripts": {
+        "start:server": "nest start --debug --watch",
+        "build:server": "nest build",
         "start:browser": "ng serve",
         "build:browser": "ng build --prod",
+        "clean": "rimraf dist",
         "format": "prettier --write .",
         "lint": "eslint ."
     },
@@ -29,11 +32,14 @@
         "class-validator": "^0.12.2",
         "dexie": "^3.0.1",
         "escape-string-regexp": "^4.0.0",
+        "execa": "^4.0.2",
         "fastify-swagger": "^2.6.0",
+        "fs-extra": "^9.0.1",
         "lazysizes": "^5.2.2",
         "material-design-icons": "^3.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
+        "shell-quote": "^1.7.2",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.3"
     },
@@ -47,7 +53,9 @@
         "@nestjs/testing": "^7.2.0",
         "@types/bluebird-global": "^3.5.12",
         "@types/escape-string-regexp": "^2.0.1",
+        "@types/fs-extra": "^9.0.1",
         "@types/node": "^14.0.14",
+        "@types/shell-quote": "^1.7.0",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
         "eslint": "^7.3.1",
