--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -2,7 +2,8 @@ root: true
 parser: '@typescript-eslint/parser'
 parserOptions:
     project:
-        - src/browser/tsconfig.json
+        - src/tsconfig.json
+        - src/*/tsconfig.json
 plugins:
     - '@typescript-eslint'
     - prettier
