--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -2,21 +2,28 @@
     "compileOnSave": false,
     "compilerOptions": {
         "baseUrl": "./",
-        "outDir": "./dist/out-tsc",
+        "rootDir": "./",
+        "outDir": "../dist/out-tsc",
+
         "sourceMap": true,
+        "inlineSources": true,
+        "removeComments": true,
         "declaration": false,
+
         "module": "ESNext",
         "moduleResolution": "node",
-        "emitDecoratorMetadata": true,
-        "experimentalDecorators": true,
         "importHelpers": true,
         "target": "es6",
         "typeRoots": ["node_modules/@types"],
         "types": ["node", "bluebird-global"],
+
         "strict": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
         "forceConsistentCasingInFileNames": true,
-        "skipLibCheck": true
+        "skipLibCheck": true,
+
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true
     }
 }
