--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
         "@nestjs/core": "^7.2.0",
         "@nestjs/platform-fastify": "^7.2.0",
         "@nestjs/swagger": "^4.5.11",
+        "@octokit/auth-app": "^2.4.7",
+        "@octokit/rest": "^18.0.0",
         "bluebird": "^3.7.2",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
@@ -37,6 +39,7 @@
         "fs-extra": "^9.0.1",
         "lazysizes": "^5.2.2",
         "material-design-icons": "^3.0.1",
+        "node-cache": "^5.1.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
         "shell-quote": "^1.7.2",
