--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -4,8 +4,7 @@
         "target": "ES2018",
         "lib": ["es2019"],
         "module": "CommonJS",
-        "outDir": "../../dist",
-        "sourceRoot": "../"
+        "outDir": "../../dist"
     },
     "exclude": ["test.ts", "**/*.spec.ts"]
 }
