--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "fastify-swagger": "^2.6.0",
         "fs-extra": "^9.0.1",
         "lazysizes": "^5.2.2",
+        "lodash": "^4.17.15",
         "material-design-icons": "^3.0.1",
         "node-cache": "^5.1.1",
         "reflect-metadata": "^0.1.13",
@@ -57,6 +58,7 @@
         "@types/bluebird-global": "^3.5.12",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/fs-extra": "^9.0.1",
+        "@types/lodash": "^4.14.157",
         "@types/node": "^14.0.14",
         "@types/shell-quote": "^1.7.0",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
