--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
     "scripts": {
         "start:server": "nest start --debug --watch",
         "build:server": "nest build",
+        "start:tool": "yarn build:tool --watch",
+        "build:tool": "tsc --project ./src/tool",
         "start:browser": "ng serve",
         "build:browser": "ng build --prod",
         "clean": "rimraf dist",
@@ -37,6 +39,7 @@
         "execa": "^4.0.2",
         "fastify-swagger": "^2.6.0",
         "fs-extra": "^9.0.1",
+        "js-yaml": "^3.14.0",
         "lazysizes": "^5.2.2",
         "lodash": "^4.17.15",
         "material-design-icons": "^3.0.1",
@@ -44,6 +47,7 @@
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
         "shell-quote": "^1.7.2",
+        "source-map-support": "^0.5.19",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.3"
     },
@@ -58,9 +62,11 @@
         "@types/bluebird-global": "^3.5.12",
         "@types/escape-string-regexp": "^2.0.1",
         "@types/fs-extra": "^9.0.1",
+        "@types/js-yaml": "^3.12.5",
         "@types/lodash": "^4.14.157",
         "@types/node": "^14.0.14",
         "@types/shell-quote": "^1.7.0",
+        "@types/source-map-support": "^0.5.1",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
         "@typescript-eslint/parser": "^3.4.0",
         "eslint": "^7.3.1",
