--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "extends": "../tsconfig.json",
     "compilerOptions": {
+        "baseUrl": "./",
         "lib": ["es2019", "dom"]
     },
     "exclude": ["test.ts", "**/*.spec.ts"]
