--- a/src/tool/tsconfig.json
+++ b/src/tool/tsconfig.json
@@ -5,6 +5,7 @@
         "lib": ["es2019"],
         "module": "CommonJS",
         "outDir": "../../dist",
+        "baseUrl": "./"
     },
     "exclude": ["test.ts", "**/*.spec.ts"]
 }
