--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
         "js-yaml": "^3.14.0",
         "lazysizes": "^5.2.2",
         "lodash": "^4.17.15",
+        "markdown-it": "^11.0.0",
         "material-design-icons": "^3.0.1",
         "node-cache": "^5.1.1",
+        "parse5": "^6.0.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
         "shell-quote": "^1.7.2",
@@ -64,7 +66,9 @@
         "@types/fs-extra": "^9.0.1",
         "@types/js-yaml": "^3.12.5",
         "@types/lodash": "^4.14.157",
+        "@types/markdown-it": "^10.0.1",
         "@types/node": "^14.0.14",
+        "@types/parse5": "^5.0.3",
         "@types/shell-quote": "^1.7.0",
         "@types/source-map-support": "^0.5.1",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
