--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
         "shell-quote": "^1.7.2",
+        "simple-git": "^2.11.0",
         "source-map-support": "^0.5.19",
         "tslib": "^2.0.0",
         "zone.js": "^0.10.3"
