--- a/package.json
+++ b/package.json
@@ -14,21 +14,21 @@
     },
     "private": true,
     "dependencies": {
-        "@angular/animations": "^10.0.0",
+        "@angular/animations": "^10.0.1",
         "@angular/cdk": "^10.0.0",
-        "@angular/common": "^10.0.0",
-        "@angular/compiler": "^10.0.0",
-        "@angular/core": "^10.0.0",
-        "@angular/forms": "^10.0.0",
+        "@angular/common": "^10.0.1",
+        "@angular/compiler": "^10.0.1",
+        "@angular/core": "^10.0.1",
+        "@angular/forms": "^10.0.1",
         "@angular/material": "^10.0.0",
-        "@angular/platform-browser": "^10.0.0",
-        "@angular/platform-browser-dynamic": "^10.0.0",
-        "@angular/router": "^10.0.0",
+        "@angular/platform-browser": "^10.0.1",
+        "@angular/platform-browser-dynamic": "^10.0.1",
+        "@angular/router": "^10.0.1",
         "@nestjs/common": "^7.2.0",
         "@nestjs/config": "^0.5.0",
         "@nestjs/core": "^7.2.0",
         "@nestjs/platform-fastify": "^7.2.0",
-        "@nestjs/swagger": "^4.5.11",
+        "@nestjs/swagger": "^4.5.12",
         "@octokit/auth-app": "^2.4.7",
         "@octokit/rest": "^18.0.0",
         "bluebird": "^3.7.2",
@@ -41,6 +41,7 @@
         "fs-extra": "^9.0.1",
         "js-yaml": "^3.14.0",
         "lazysizes": "^5.2.2",
+        "linkify-it": "^3.0.2",
         "lodash": "^4.17.15",
         "markdown-it": "^11.0.0",
         "material-design-icons": "^3.0.1",
@@ -57,8 +58,8 @@
     "devDependencies": {
         "@angular-devkit/build-angular": "^0.1000.0",
         "@angular/cli": "^10.0.0",
-        "@angular/compiler-cli": "^10.0.0",
-        "@angular/language-service": "^10.0.0",
+        "@angular/compiler-cli": "^10.0.1",
+        "@angular/language-service": "^10.0.1",
         "@nestjs/cli": "^7.4.1",
         "@nestjs/schematics": "^7.0.1",
         "@nestjs/testing": "^7.2.0",
@@ -85,7 +86,7 @@
         "ts-loader": "^7.0.5",
         "ts-node": "^8.10.2",
         "tsconfig-paths": "^3.9.0",
-        "type-fest": "^0.15.1",
+        "type-fest": "^0.16.0",
         "typescript": "^3.9.5"
     }
 }
