--- a/.travis.yml
+++ b/.travis.yml
@@ -3,5 +3,5 @@ node_js: lts/*
 branches:
     only:
         - master
-script: yarn build
+script: yarn build:server && yarn build:tool && yarn build:browser
 cache: yarn
