--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -25,9 +25,5 @@
     "[typescriptreact]": {
         "editor.defaultFormatter": "dbaeumer.vscode-eslint"
     },
-    "typescript.tsdk": "node_modules\\typescript\\lib",
-    "appService.zipIgnorePattern": [
-        "node_modules{,/**}",
-        ".vscode{,/**}"
-    ]
+    "typescript.tsdk": "node_modules\\typescript\\lib"
 }
