--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -13,7 +13,9 @@ jobs:
       with:
         node-version: '12'
     - name: Install
-      run: yarn install --frozen-lockfile --prefer-offline
+      run: |
+        npx lock-treatment-tool --registry=https://registry.npmjs.org
+        yarn install --frozen-lockfile --prefer-offline
     - name: Build
       run: yarn build:server
     - name: Upload artifact
