--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -13,11 +13,11 @@ jobs:
       with:
         node-version: '12'
     - name: Install
-      run: yarn install --frozen-lockfile --prefer-offline
+      run: yarn install --no-lockfile --prefer-offline
     - name: Build
       run: yarn build:server
     - name: Clean
-      run: yarn install --frozen-lockfile --prefer-offline --prod
+      run: yarn install --no-lockfile --prefer-offline --prod
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
