--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -16,17 +16,23 @@ jobs:
       run: yarn install --no-lockfile --prefer-offline
     - name: Build
       run: yarn build:server
-    - name: Clean
-      run: yarn install --no-lockfile --prefer-offline --prod
     - name: Upload artifact
       uses: actions/upload-artifact@v1.0.0
       with:
         name: server
         path: ./dist
+    - name: Prepare app
+      run: |
+        yarn install --no-lockfile --prefer-offline --prod
+        rf -rf ./publish
+        mkdir ./publish
+        cp ./dist ./publish/ -r
+        cp ./node_modules ./publish/ -r
+        cp ./scripts/server/* ./publish/ -r
     - name: 'Run Azure webapp deploy action using publish profile credentials'
       uses: azure/webapps-deploy@v1
       if: github.ref == 'refs/heads/master'
       with: 
         app-name: ehtt
         publish-profile: ${{ secrets.AzureWebAppPublishProfile }}
-        package: '.' 
+        package: ./publish 
