--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -1,6 +1,5 @@
 {
     "extends": "../tsconfig.json",
-    "compilerOptions": {
-    },
+    "compilerOptions": {},
     "exclude": ["test.ts", "**/*.spec.ts"]
 }
