--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -3,7 +3,7 @@
     "compilerOptions": {
         "target": "ES2018",
         "module": "CommonJS",
-        "outDir": "../../dist",
+        "outDir": "../../dist"
     },
     "exclude": ["test.ts", "**/*.spec.ts"]
 }
