fix code style; improve  bundle size

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -23,9 +23,9 @@ jobs:
                   path: ./dist
             - name: Prepare app
               run: |
-                node ./scripts/server.js
-                yarn install --no-lockfile --prefer-offline
-                cp ./node_modules ./dist/ -r
+                  node ./scripts/server.js
+                  cd ./dist
+                  yarn install --no-lockfile --prefer-offline
             - name: 'Run Azure webapp deploy action using publish profile credentials'
               uses: azure/webapps-deploy@v1
               if: github.ref == 'refs/heads/master'
