--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start:tool": "yarn build:tool --watch",
         "build:tool": "tsc --project ./src/tool",
         "start:browser": "ng serve",
-        "build:browser": "ng build --prod",
+        "build:browser": "ng build --prod --stats-json",
+        "analyze:browser": "webpack-bundle-analyzer dist/browser/stats.json",
         "clean": "rimraf dist",
         "format": "prettier --ignore-path .gitignore --write .",
         "lint": "eslint --ext .ts --ignore-path .gitignore --ignore-pattern **/*.spec.ts -- ."
@@ -34,15 +35,15 @@
         "bluebird": "^3.7.2",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
-        "dexie": "^3.0.1",
         "escape-string-regexp": "^4.0.0",
         "execa": "^4.0.2",
         "fastify-swagger": "^2.6.0",
         "fs-extra": "^9.0.1",
+        "idb-keyval": "^3.2.0",
         "js-yaml": "^3.14.0",
         "lazysizes": "^5.2.2",
         "linkify-it": "^3.0.2",
-        "lodash": "^4.17.15",
+        "lodash-es": "^4.17.15",
         "markdown-it": "^11.0.0",
         "material-design-icons": "^3.0.1",
         "node-cache": "^5.1.1",
@@ -67,7 +68,7 @@
         "@types/escape-string-regexp": "^2.0.1",
         "@types/fs-extra": "^9.0.1",
         "@types/js-yaml": "^3.12.5",
-        "@types/lodash": "^4.14.157",
+        "@types/lodash-es": "^4.17.3",
         "@types/markdown-it": "^10.0.1",
         "@types/node": "^14.0.14",
         "@types/parse5": "^5.0.3",
@@ -87,6 +88,7 @@
         "ts-node": "^8.10.2",
         "tsconfig-paths": "^3.9.0",
         "type-fest": "^0.16.0",
-        "typescript": "^3.9.5"
+        "typescript": "^3.9.5",
+        "webpack-bundle-analyzer": "^3.8.0"
     }
 }
