--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
     },
     "typescript.tsdk": "node_modules\\typescript\\lib",
     "cSpell.words": [
+        "fastify",
         "execa",
         "nestjs",
         "octokit"
