--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
         "class-validator": "^0.12.2",
         "escape-string-regexp": "^4.0.0",
         "execa": "^4.0.2",
+        "fastify-compress": "^2.0.1",
         "fastify-swagger": "^2.6.0",
         "fs-extra": "^9.0.1",
         "idb-keyval": "^3.2.0",
