--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,10 +26,5 @@
         "editor.defaultFormatter": "dbaeumer.vscode-eslint"
     },
     "typescript.tsdk": "node_modules\\typescript\\lib",
-    "cSpell.words": [
-        "fastify",
-        "execa",
-        "nestjs",
-        "octokit"
-    ]
+    "cSpell.words": ["fastify", "execa", "nestjs", "octokit"]
 }
