--- a/.github/workflows/tool.yml
+++ b/.github/workflows/tool.yml
@@ -1,4 +1,4 @@
-name: build
+name: tool
 
 on: [push, pull_request]
 
@@ -14,6 +14,8 @@ jobs:
                   node-version: '12'
             - name: Install
               uses: bahmutov/npm-install@v1
+              with:
+                  useLockFile: false
 
             - name: Build
               run: yarn build:tool
