--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
         "build:server": "nest build",
         "start:tool": "yarn build:tool --watch",
         "build:tool": "tsc --project ./src/tool",
+        "tool": "node ./dist/tool/index.js",
         "start:browser": "ng serve",
         "build:browser": "ng build --prod --stats-json",
         "analyze:browser": "webpack-bundle-analyzer dist/browser/stats.json",
@@ -32,9 +33,11 @@
         "@nestjs/swagger": "^4.5.12",
         "@octokit/auth-app": "^2.4.7",
         "@octokit/rest": "^18.0.0",
+        "@types/pako": "^1.0.1",
         "bluebird": "^3.7.2",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
+        "commander": "^5.1.0",
         "escape-string-regexp": "^4.0.0",
         "fastify-compress": "^2.0.1",
         "fastify-swagger": "^2.6.0",
@@ -46,6 +49,7 @@
         "markdown-it": "^11.0.0",
         "material-design-icons": "^3.0.1",
         "node-cache": "^5.1.1",
+        "pako": "^1.0.11",
         "parse5": "^6.0.0",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^6.5.5",
