--- a/src/tool/tsconfig.json
+++ b/src/tool/tsconfig.json
@@ -3,8 +3,7 @@
     "compilerOptions": {
         "target": "ES2018",
         "module": "CommonJS",
-        "outDir": "../../dist",
-        "baseUrl": "./"
+        "outDir": "../../dist"
     },
     "exclude": ["test.ts", "**/*.spec.ts"]
 }
