--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
         "build:tool": "tsc --project ./src/tool",
         "tool": "node ./dist/tool/index.js",
         "start:browser": "ng serve",
-        "build:browser": "ng build --prod --stats-json",
-        "analyze:browser": "webpack-bundle-analyzer dist/browser/stats.json",
+        "build:browser": "ng build --prod",
+        "analyze:browser": "webpack-bundle-analyzer --mode=static --default-sizes=gzip  --report=dist/browser/report.html dist/browser/stats.json",
         "clean": "rimraf dist",
         "format": "prettier --ignore-path .gitignore --write .",
         "lint": "eslint --ext .ts --ignore-path .gitignore --ignore-pattern **/*.spec.ts -- ."
@@ -33,7 +33,6 @@
         "@nestjs/swagger": "^4.5.12",
         "@octokit/auth-app": "^2.4.7",
         "@octokit/rest": "^18.0.0",
-        "@types/pako": "^1.0.1",
         "bluebird": "^3.7.2",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
@@ -67,11 +66,11 @@
         "@nestjs/schematics": "^7.0.1",
         "@nestjs/testing": "^7.3.0",
         "@types/bluebird-global": "^3.5.12",
-        "@types/escape-string-regexp": "^2.0.1",
         "@types/fs-extra": "^9.0.1",
         "@types/js-yaml": "^3.12.5",
         "@types/markdown-it": "^10.0.1",
         "@types/node": "^14.0.14",
+        "@types/pako": "^1.0.1",
         "@types/parse5": "^5.0.3",
         "@types/source-map-support": "^0.5.1",
         "@typescript-eslint/eslint-plugin": "^3.4.0",
