--- a/.github/workflows/browser.yml
+++ b/.github/workflows/browser.yml
@@ -16,6 +16,9 @@ jobs:
               uses: bahmutov/npm-install@v1
               with:
                   useLockFile: false
+            - name: Set env
+              run: node ./scripts/info.js
+
             - name: Build
               run: yarn build:browser
             - name: Upload artifact
