--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
     "files": [],
     "references": [
         { "path": "./src/browser/tsconfig.json" },
+        { "path": "./src/browser/tsconfig.worker.json" },
         { "path": "./src/server/tsconfig.json" },
-        { "path": "./src/tool/tsconfig.json" }
+        { "path": "./src/tool/tsconfig.json" },
     ]
 }
