--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,6 @@
         { "path": "./src/browser/tsconfig.json" },
         { "path": "./src/browser/tsconfig.worker.json" },
         { "path": "./src/server/tsconfig.json" },
-        { "path": "./src/tool/tsconfig.json" },
+        { "path": "./src/tool/tsconfig.json" }
     ]
 }
