--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
     "scripts": {
         "start:server": "nest start --debug --watch",
         "build:server": "nest build",
+        "test:server": "echo no test",
         "start:tool": "yarn build:tool --watch",
         "build:tool": "tsc --project ./src/tool",
+        "test:tool": "yarn tool --help",
         "tool": "node ./dist/tool",
         "start:browser": "ng serve",
         "build:browser": "ng build --prod",
+        "test:browser": "echo no test",
         "analyze:browser": "webpack-bundle-analyzer --mode=static --default-sizes=gzip  --report=dist/browser/report.html dist/browser/stats.json",
         "clean": "rimraf dist",
         "format": "prettier --ignore-path .gitignore --write .",
