--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start:server": "nest start --debug --watch",
     "build:server": "nest build",
-    "test:server": "echo no test",
+    "test:server": "jest --config ./src/server/jest.config.js",
     "start:tool": "yarn build:tool --watch",
     "build:tool": "tsc --project ./src/tool",
     "test:tool": "yarn tool --help",
@@ -74,12 +74,14 @@
     "@types/bluebird-global": "^3.5.12",
     "@types/cli-color": "^2.0.0",
     "@types/fs-extra": "^9.0.1",
+    "@types/jest": "^26.0.4",
     "@types/js-yaml": "^3.12.5",
     "@types/markdown-it": "^10.0.1",
     "@types/node": "^14.0.23",
     "@types/pako": "^1.0.1",
     "@types/parse5": "^5.0.3",
     "@types/source-map-support": "^0.5.2",
+    "@types/supertest": "^2.0.10",
     "@typescript-eslint/eslint-plugin": "^3.6.1",
     "@typescript-eslint/parser": "^3.6.1",
     "eslint": "^7.4.0",
