--- a/src/tool/tsconfig.json
+++ b/src/tool/tsconfig.json
@@ -3,7 +3,8 @@
   "compilerOptions": {
     "target": "ES2018",
     "module": "CommonJS",
-    "outDir": "../../dist"
+    "outDir": "../../dist",
+    "lib": ["ES2018"]
   },
   "exclude": ["test.ts", "**/*.spec.ts"]
 }
