add server e2e test

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -4,6 +4,7 @@ parserOptions:
   project:
     - src/tsconfig.json
     - src/*/tsconfig.json
+    - src/*/tsconfig.*.json
 plugins:
   - '@typescript-eslint'
   - prettier
