--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.1.0",
+    "jest-to-match-shape-of": "^1.3.0",
     "prettier": "^2.0.5",
     "rimraf": "^3.0.2",
     "supertest": "^4.0.2",
