--- a/src/server/tsconfig.json
+++ b/src/server/tsconfig.json
@@ -4,8 +4,7 @@
     "target": "ES2018",
     "module": "CommonJS",
     "outDir": "../../dist",
-    "lib": ["ES2018"],
-    "types": ["node", "bluebird-global"]
+    "lib": ["ES2018"]
   },
-  "exclude": ["test.ts", "**/*.spec.ts"]
+  "exclude": ["**/*.test.ts", "**/*.spec.ts", "setup-jest.ts"]
 }
