--- a/src/browser/tsconfig.worker.json
+++ b/src/browser/tsconfig.worker.json
@@ -1,10 +1,11 @@
 /* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
-  "extends": "../tsconfig.json",
+  "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/worker",
     "lib": ["es2018", "webworker"],
     "types": []
   },
-  "include": ["**/*.worker.ts"]
+  "include": ["**/*.worker.ts"],
+  "exclude": ["test.ts", "**/*.spec.ts"]
 }
