--- a/src/browser/tsconfig.json
+++ b/src/browser/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../tsconfig.json",
-  "compilerOptions": {},
+  "compilerOptions": {
+  },
   "angularCompilerOptions": {
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true,
